# Diffpose

./: main_diffpose_frame.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
common/: data_utils.py  generators.py  h36m_dataset.py  utils_diff.py
common/.ipynb_checkpoints/: data_utils-checkpoint.py  h36m_dataset-checkpoint.py
configs/: human36m_diffpose_uvxyz_gt.yml
configs/.ipynb_checkpoints/: human36m_diffpose_uvxyz_gt-checkpoint.yml
models/: gcndiff.py
runners/: diffpose_frame.py
runners/.ipynb_checkpoints/: diffpose_frame-checkpoint.py
