[tool.poetry]
name = "diffpose"
version = "0.1.0"
description = ""
authors = ["Saksham Goyal <s.goyal@samsung.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
pyyaml = "^6.0.1"
numpy = "=1.21.5"
scipy = "=1.7.3"
tqdm = "=4.64.0"
matplotlib = "^3.2.2"
transformers = "^4.38.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
